<resources>
    <string name="app_name">Informatics College</string>
    <string name="logo">logo</string>
    <string name="student_id">Student ID</string>
    <string name="name">Student Id</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultname">Your Name</string>
    <string name="defaultid">(Your ID)</string>
    <string name="profile_image">profile image</string>
    <string name="home">Home</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="defaultf">none</string>
    <string name="defaultgen">Male</string>
    <string name="developer">Developer</string>
    <string name="about_detail">Sajan Gurung\nsaw.jan.grg3e@gmail.com</string>
    <string name="version">Version: 1.0.2</string>
    <string name="sawjan_3e">\@sawjan.3e</string>
    <string name="new_password">new password</string>
    <string name="old_password">Old Password</string>
    <string name="old_pass">old password</string>
    <string name="new_pass">New Password</string>
    <string name="s_id">STUDENT ID</string>
    <string name="e_mail">E-MAIL</string>
    <string name="faculty">FACULTY</string>
    <string name="lecturers">Lecturers</string>
</resources>
