<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/g0">
        <item android:id="@+id/home" android:title="@string/home" android:icon="@drawable/ic_home"/>
    </group>

    <item android:title="Setting" android:enabled="false">
        <menu>
        <group android:id="@+id/g1">
        <item android:id="@+id/profile" android:title="@string/profile" android:icon="@drawable/ic_profile"/>
        </group>
        </menu>
    </item>
    <item android:title="Other" android:enabled="false">
    <menu>
        <item android:id="@+id/about" android:title="@string/about" android:icon="@drawable/ic_about"/>
        <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/ic_logout"/>
        <item android:id="@+id/exit" android:title="@string/exit" android:icon="@drawable/ic_exit"/>
    </menu>
    </item>
</menu>