<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:background="@color/DarkRed"
    android:paddingStart="20dp"
    android:paddingBottom="10dp"
    android:paddingTop="40dp">
    <LinearLayout
        android:padding="10dp"
        android:id="@+id/pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_height="70dp"
            android:layout_width="70dp"
            android:background="@drawable/pro"
            android:id="@+id/pro_img"
            android:contentDescription="@string/profile_image" />
    </LinearLayout>
    <LinearLayout
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:layout_toEndOf="@+id/pp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/student_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/defaultname"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/student_id"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/defaultid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/faculty"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/defaultf"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gen"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/defaultgen"/>
</LinearLayout>
</RelativeLayout>