<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:id="@+id/sidebar2">
   <!-- tools:openDrawer="start"-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkRed"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkRed"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <View
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/container_round"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/f_letter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:textColor="@color/DarkRed"
                android:textSize="70sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightGray">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:text="Sajan Gurung"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ccc"
                    android:textSize="12sp"
                    android:text="Name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#444"
                    android:textSize="12sp"
                    android:text="Change Password"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/o_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_pass"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ccc"
                    android:textSize="12sp"
                    android:text="@string/old_password"/>
                <EditText
                    android:id="@+id/n_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ccc"
                    android:textSize="12sp"
                    android:text="@string/new_pass"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true">
                    <TextView
                        android:id="@+id/sid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#444"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ccc"
                        android:textSize="12sp"
                        android:text="@string/s_id"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/smail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#444"
                        android:textSize="12sp"
                        android:text=""/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ccc"
                        android:textSize="12sp"
                        android:text="@string/e_mail"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:id="@+id/sfac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#444"
                        android:textSize="16sp"
                        android:text=""/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ccc"
                        android:textSize="12sp"
                        android:text="@string/faculty"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>